<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="post_attachment">post_attachment</string>
    <string name="newerPosts">New posts</string>
    <string name="menu_save">save</string>
    <string name="description_photo">description_photo</string>
    <string name="remove">remove</string>
    <string name="description_select_photo">description_select_photo</string>
    <string name="description_take_photo">description_take_photo</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="logout">Logout</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="or_create_an_account">Or create an account</string>
    <string name="name">name</string>
    <string name="password_conrirmation">password conrirmation</string>
    <string name="sign_up">sign_up</string>
    <string name="fill_in_the_following_fields_to_create_an_account">Please fill in the following fields to create an account:</string>
    <string name="add_avatar_if_you_want">Add avatar, if you want:</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="incorrect_login_password">Incorrect login/password</string>
    <string name="enter_login_and_password">Enter login and password</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string name="please_fill_in_all_fields">Please fill in all fields!</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="you_have_successfully_registered">You have successfully registered!</string>
    <string name="avatar">avatar</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="long_ago">long ago</string>
    <string name="ad_image">adImage</string>
</resources>
